--- a/src/main/resources/Astrologer/localization/jpn/CharacterStrings.json
+++ b/src/main/resources/Astrologer/localization/jpn/CharacterStrings.json
@@ -5,9 +5,9 @@
       "アストロロジャー"
     ],
     "TEXT": [
-      "星の力に取りつかれた占い師。 NL 超自然的な力の完全なる信者である。",
-      "NL あなたは星を見る。",
-      "灯りの落ちた通りで人々を導いていると、数人の頭巾をした人物が、何やら儀式のようなものを行っているところに出くわした。 NL あなたが近づくと、薄気味悪く一斉にこちらを向く。一番背の高い人物には牙があった。彼は長く青白い手をあなたに伸ばしてくる。 NL ~「姉妹よ、我らの仲間に加われ…そして塔の温もりを肌で感じるのだ。」~"
+      "星々とオカルトに夢中な占星術師。",
+      "NL あなたは星々を見つめる。",
+      "灯りのない通りを歩いていると、何やら面白そうな儀式をしているフードを被った者たちに出くわした。 NL あなたが近づくと、不気味にも彼らは一斉に向き直る。 NL その中で一番背の高い者が牙をむき出し、青白くて長い手をあなたに向けて差し出した。 NL ~\「同胞~ ~よ。~ ~我ら~ ~の~ ~一員~ ~と~ ~なれ。~ ~そして~ ~塔~ ~の~ ~鼓動~ ~を~ ~感じ~ ~るのだ。」\~"
     ]
   }
 }
