--- a/src/main/resources/Astrologer/localization/jpn/Keywords.json
+++ b/src/main/resources/Astrologer/localization/jpn/Keywords.json
@@ -5,7 +5,7 @@
       "星",
       "星"
     ],
-    "DESCRIPTION": "このカードをプレイするか #y廃棄 したとき、 #y星の相 は増加し #y星辰 は変化する。"
+    "DESCRIPTION": "このカードをプレイするか #y廃棄 すると #y星の相 が増加し #y星辰 は変化する。"
   },
   {
     "PROPER_NAME": "星の相",
@@ -13,7 +13,7 @@
       "星の相",
       "星の相"
     ],
-    "DESCRIPTION": "#b1 から戦闘は開始し、 #y星 カードがプレイされるか #y廃棄 されると増加する。"
+    "DESCRIPTION": "戦闘時 #b1 から開始する。 #y星 カードをプレイするか #y廃棄 すると #y星の相 が増加する。"
   },
   {
     "PROPER_NAME": "凶星",
@@ -31,13 +31,13 @@
       "月",
       "月:"
     ],
-    "DESCRIPTION": "#y太陽 か #y月 のみ存在する。 NL #y星 カードがプレイされるか #y廃棄 されると、 #y星辰 は切り替わる。"
+    "DESCRIPTION": "星辰には #y月 と #y太陽 がある。 NL #y星 カードをプレイするか #y廃棄 した時、 #y星辰 が切り替わる。"
   },
   {
     "PROPER_NAME": "星明かり",
     "NAMES": [
       "星明かり"
     ],
-    "DESCRIPTION": "現在の #y星の相 に等しいHPを敵のターン開始時に失わせ、そのたびに #y星明かり は #b1 減少する。"
+    "DESCRIPTION": "敵のターン開始時に #y星の相 に等しい数だけHPを失わせる。 #y星明かり が #b1 減少する。"
   }
 ]
